--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<!--parent>
-		<groupId>org.wso2.carbon</groupId>
-		<artifactId>carbon-products</artifactId>
-		<version>4.2.0</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent-->
+    <parent>
+        <groupId>org.wso2</groupId>
+        <artifactId>wso2</artifactId>
+        <version>1</version>
+    </parent>
 
-	<modelVersion>4.0.0</modelVersion>
+
+    <modelVersion>4.0.0</modelVersion>
 	<groupId>org.wso2.identity</groupId>
 	<artifactId>identity-server-parent</artifactId>
 	<packaging>pom</packaging>
@@ -144,15 +144,6 @@
 			<organization>WSO2</organization>
 		</developer>
 	</developers>
- 
-	<scm>
- 		<connection>scm:svn:https://wso2.org/repos/wso2/trunk/solutions/identity</connection>
-		<developerConnection>
-            scm:svn:https://wso2.org/repos/wso2/trunk/solutions/identity
-        </developerConnection>
-		<url>https://wso2.org/repos/wso2/trunk/solutions/identity</url>
-	</scm>
-
     <pluginRepositories>
         <pluginRepository>
             <id>wso2-maven2-repository</id>
@@ -674,7 +665,7 @@
             <dependency>
                 <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.core.ui.feature</artifactId>
-                <version>${product.identity.version}</version>
+                <version>${carbon.kernel.version}</version>
                 <type>zip</type>
             </dependency>
             <dependency>
@@ -811,26 +802,10 @@
 
 	</profiles>
 
-
-    <distributionManagement>
-        <repository>
-            <id>wso2.releases</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
-        </repository>
-
-        <snapshotRepository>
-            <id>wso2.snapshots</id>
-            <name>WSO2 Snapshot Repository</name>
-            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
 	<properties>
-		<carbon.identity.version>4.3.2</carbon.identity.version>
+		<carbon.identity.version>4.3.3</carbon.identity.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
 		<stratos.identity.version>${stratos.version}</stratos.identity.version>
-		<product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
 		<bcprov.jdk13.version>140</bcprov.jdk13.version>
 		<bcprov.jdk15.version>132</bcprov.jdk15.version>
 		<axis2.wso2.version>${orbit.version.axis2}</axis2.wso2.version>
@@ -909,7 +884,9 @@
         <carbon.registry.version>4.3.0</carbon.registry.version>
         <carbon.multitenancy.version>4.3.3</carbon.multitenancy.version>
         <jaggery.extensions.version>1.2.0</jaggery.extensions.version>
-	</properties>
+        <project.scm.id>my-scm-server</project.scm.id>
+
+    </properties>
 
     <repositories>
         <!-- Before adding ANYTHING in here, please start a discussion on the dev list.
@@ -952,6 +929,13 @@
             </releases>
         </repository>
     </repositories>
+
+    <scm>
+        <url>https://github.com/wso2/product-is.git</url>
+        <developerConnection>scm:git:https://github.com/wso2/product-is.git</developerConnection>
+        <connection>scm:git:https://github.com/wso2/product-is.git</connection>
+        <tag>HEAD</tag>
+    </scm>
 
 
 </project>
