--- a/modules/integration/tests-common/pom.xml
+++ b/modules/integration/tests-common/pom.xml
@@ -20,14 +20,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>identity-integration-tests</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.wso2.identity</groupId>
     <artifactId>Identity-integration-tests-common</artifactId>
     <packaging>pom</packaging>
     <version>5.1.0-SNAPSHOT</version>
