--- a/modules/samples/passive-sts/passive-sts-client/pom.xml
+++ b/modules/samples/passive-sts/passive-sts-client/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2identity-samples-passivests</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>org.wso2.identity</groupId>
     <artifactId>PassiveSTSSample</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
