--- a/modules/samples/saml2-sso-demo/pom.xml
+++ b/modules/samples/saml2-sso-demo/pom.xml
@@ -2,14 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-	<groupId>org.wso2.identity</groupId>
 	<artifactId>saml2.sso.demo</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0-SNAPSHOT</version>
