--- a/modules/samples/scim/scim-provisioning/pom.xml
+++ b/modules/samples/scim/scim-provisioning/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-scim</artifactId>
         <version>5.0.0</version>
         <relativePath>../pom.xml</relativePath>
