--- a/modules/samples/sso/SSOAgentSample/pom.xml
+++ b/modules/samples/sso/SSOAgentSample/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-sso</artifactId>
         <version>5.0.0</version>
         <relativePath>../pom.xml</relativePath>
