--- a/modules/samples/user-mgt/SampleCustomeUserStoreManager/pom.xml
+++ b/modules/samples/user-mgt/SampleCustomeUserStoreManager/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-usermgt</artifactId>
         <version>5.0.0</version>
         <relativePath>../pom.xml</relativePath>
