--- a/modules/samples/user-mgt/remote-user-mgt/pom.xml
+++ b/modules/samples/user-mgt/remote-user-mgt/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-usermgt</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>org.wso2.identity</groupId>
     <artifactId>identity-samples-remote-user-mgt</artifactId>
     <packaging>jar</packaging>
     <name>Samples/Remote User Management</name>
