--- a/modules/samples/xacml/kmarket-trading-sample/pom.xml
+++ b/modules/samples/xacml/kmarket-trading-sample/pom.xml
@@ -4,14 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.wso2.identity</groupId>
+        <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-identity-samples-xacml</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.wso2.carbon</groupId>
     <artifactId>org.wso2.carbon.identity.samples.entitlement.kmarket.trading</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
