--- a/modules/features/org.wso2.identity.styles.feature/pom.xml
+++ b/modules/features/org.wso2.identity.styles.feature/pom.xml
@@ -33,7 +33,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.wso2.identity</groupId>
+			<groupId>org.wso2.is</groupId>
 			<artifactId>org.wso2.identity.styles</artifactId>
 		</dependency>
         <dependency>
@@ -65,7 +65,7 @@
 								</properties>
 							    </adviceFile> 
 							<bundles>
-								<bundleDef>org.wso2.identity:org.wso2.identity.styles</bundleDef>
+								<bundleDef>org.wso2.is:org.wso2.identity.styles</bundleDef>
 							</bundles>
 							<importFeatures>
 								<importFeatureDef>org.wso2.carbon.core.ui:${carbon.kernel.version}</importFeatureDef>
