--- a/pom.xml
+++ b/pom.xml
@@ -2035,7 +2035,7 @@
                 <version>${commons.httpclient.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.identity</groupId>
+                <groupId>org.wso2.is</groupId>
                 <artifactId>org.wso2.identity.styles</artifactId>
                 <version>${product.identity.version}</version>
             </dependency>
