[maven-release-plugin] prepare release identity-server-parent-5.1.0

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -8,13 +8,12 @@
 	OR CONDITIONS OF ANY KIND, either express or implied. ~ See the License for 
 	the specific language governing permissions and ~ limitations under the License. -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.wso2.is</groupId>
 		<artifactId>identity-server-parent</artifactId>
-		<version>5.1.0-SNAPSHOT</version>
+		<version>5.1.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -786,14 +785,10 @@
 						<phase>package</phase>
 						<configuration>
 							<tasks>
-								<replace token="false" value="true"
-									dir="target/wso2carbon-core-${carbon.kernel.version}/repository/components">
+								<replace token="false" value="true" dir="target/wso2carbon-core-${carbon.kernel.version}/repository/components">
 									<include name="**/bundles.info" />
 								</replace>
-                                <replace
-                                        file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/tomcat/context.xml"
-                                        token="&lt;Context&gt;"
-                                        value="&lt;Context crossContext=&quot;true&quot;&gt;"/>
+                                <replace file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/tomcat/context.xml" token="&lt;Context&gt;" value="&lt;Context crossContext=&quot;true&quot;&gt;" />
 							</tasks>
 						</configuration>
 						<goals>
