--- a/pom.xml
+++ b/pom.xml
@@ -678,11 +678,6 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon</groupId>
-                <artifactId>org.wso2.carbon.ui.menu.stratos</artifactId>
-                <version>${stratos.identity.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.integration.framework</artifactId>
                 <version>${carbon.kernel.version}</version>
             </dependency>
@@ -803,12 +798,9 @@
 	<properties>
 		<carbon.identity.version>4.3.3</carbon.identity.version>
         <product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
-		<stratos.identity.version>${stratos.version}</stratos.identity.version>
 		<bcprov.jdk13.version>140</bcprov.jdk13.version>
 		<bcprov.jdk15.version>132</bcprov.jdk15.version>
-		<axis2.wso2.version>${orbit.version.axis2}</axis2.wso2.version>
         <sevlet.api.version>2.5</sevlet.api.version>
-		<axiom.wso2.version>${orbit.version.axiom}</axiom.wso2.version>
         <neethi.wso2.version>2.0.4.wso2v3</neethi.wso2.version>
         <axiom.impl.version>1.2.12</axiom.impl.version>
         <gdata.core.wso2.version>1.47.0.wso2v1</gdata.core.wso2.version>
@@ -830,7 +822,6 @@
         <jstl.version>1.1.2</jstl.version>
         <google.collect.wso2.version>1.0.0.wso2v1</google.collect.wso2.version>
         <junit.version>3.8.1</junit.version>
-		<carbon.version>${wso2carbon.version}</carbon.version>
 		<carbon.kernel.version>4.3.0</carbon.kernel.version>
         <carbon.commons.version>4.3.3</carbon.commons.version>
 		<carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
@@ -842,11 +833,9 @@
 		<apache.derby.wso2.version>10.3.2.1wso2v1</apache.derby.wso2.version>
 		<hibernate.wso2.version>3.2.5.ga-wso2v1</hibernate.wso2.version>
 		<ehcache.version>1.5.0.wso2v3</ehcache.version>
-		<bcel.wso2.version>5.2.0.wso2v1</bcel.wso2.version>		
+		<bcel.wso2.version>5.2.0.wso2v1</bcel.wso2.version>
 		<asm.wso2.version>3.1.wso2v1</asm.wso2.version>
 		<cglib.wso2.version>2.2.wso2v1</cglib.wso2.version>
-		<axis2.jibx.wso2.version>${orbit.version.axis2}</axis2.jibx.wso2.version>
-		<axis2.jaxb.wso2.version>${orbit.version.axis2}</axis2.jaxb.wso2.version>
 		<jibx.wso2.version>1.2.1.wso2v1</jibx.wso2.version>
 		<jaxb.wso2.version>2.2.5.wso2v1</jaxb.wso2.version>
 		<kaptcha.wso2.version>2.3.0.wso2v1</kaptcha.wso2.version>
@@ -870,17 +859,17 @@
         <i18n.module.version>1.0.0</i18n.module.version>
         <wso2.store.version>2.0.0</wso2.store.version>
         <test.framework.version>4.3.1</test.framework.version>
-        <!--<test.framework.util.version>4.3.0-SNAPSHOT</test.framework.util.version>-->
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
         <testng.version>6.1.1</testng.version>
-        <!--<test.framework.version>4.3.1-SNAPSHOT</test.framework.version>-->
-        <!--<test.framework.util.version>4.3.0-SNAPSHOT</test.framework.util.version>-->
         <clarity.version>4.2.1</clarity.version>
         <carbon.deployment.version>4.3.1</carbon.deployment.version>
         <carbon.registry.version>4.3.0</carbon.registry.version>
         <carbon.multitenancy.version>4.3.3</carbon.multitenancy.version>
         <jaggery.extensions.version>1.2.0</jaggery.extensions.version>
+        <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
+        <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
+        <axiom.wso2.version>1.2.11.wso2v5</axiom.wso2.version>
         <project.scm.id>my-scm-server</project.scm.id>
 
     </properties>
