--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<artifactId>identity-server-parent</artifactId>
 	<packaging>pom</packaging>
 	<description>WSO2 Identity Server</description>
-	<version>5.1.0</version>
+	<version>5.1.1-SNAPSHOT</version>
 	<name>WSO2 Identity Server</name>
 	<url>http://wso2.org/projects/identity</url>
 
@@ -861,7 +861,7 @@
 
 	<properties>
 		<carbon.identity.version>4.3.3</carbon.identity.version>
-        <product.identity.version>5.1.0</product.identity.version>
+        <product.identity.version>5.1.1-SNAPSHOT</product.identity.version>
 		<bcprov.jdk13.version>140</bcprov.jdk13.version>
 		<bcprov.jdk15.version>132</bcprov.jdk15.version>
         <sevlet.api.version>2.5</sevlet.api.version>
@@ -986,7 +986,7 @@
         <url>https://github.com/wso2/product-is.git</url>
         <developerConnection>scm:git:https://github.com/wso2/product-is.git</developerConnection>
         <connection>scm:git:https://github.com/wso2/product-is.git</connection>
-        <tag>identity-server-parent-5.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
