Fixing integration test module IS
Conflicts:
	modules/integration/pom.xml
	modules/integration/tests-integration/pom.xml
	modules/integration/tests-ui/pom.xml
	pom.xml

--- a/modules/integration/tests-ui-integration/pom.xml
+++ b/modules/integration/tests-ui-integration/pom.xml
@@ -59,7 +59,7 @@
                         <property>
                             <name>carbon.zip</name>
                             <value>
-                                ${basedir}/../../distribution/target/wso2is-${product.identity.version}.zip
+                                ${basedir}/../../distribution/target/wso2is-${project.version}.zip
                             </value>
                         </property>
                         <property>
@@ -201,7 +201,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/resources/security/
+                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/resources/security/
                                     </directory>
                                     <includes>
                                         <include>**/*.jks</include>
@@ -222,7 +222,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/deployment/client/modules
+                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/deployment/client/modules
                                     </directory>
                                     <includes>
                                         <include>**/*.mar</include>
@@ -250,26 +250,16 @@
             <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.automationutils</groupId>
             <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.automationutils</groupId>
             <artifactId>org.wso2.carbon.integration.common.utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.automationutils</groupId>
             <artifactId>org.wso2.carbon.integration.common.extensions</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.tests</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.identity</groupId>
-            <artifactId>org.wso2.identity.integration.ui.pages</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -281,6 +271,19 @@
             <groupId>org.wso2.charon</groupId>
             <artifactId>org.wso2.charon.core</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.is</groupId>
+            <artifactId>org.wso2.identity.integration.common.clients</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.is</groupId>
+            <artifactId>org.wso2.identity.integration.common.utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.is</groupId>
+            <artifactId>org.wso2.identity.integration.ui.pages</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
